# stunts

./: .gitignore  CI_SETUP_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: README.md
.github/workflows/: ci.yml  security-compliance.yml  security-scan.yml
athena-orchestration/: .env.example  .gitignore  README.md  pyproject.toml
athena-orchestration/adapters/: __init__.py  base.py
athena-orchestration/adapters/github/: __init__.py  github_adapter.py
athena-orchestration/adapters/llm/: __init__.py  claude_adapter.py  gemini_adapter.py  gpt_adapter.py  grok_adapter.py  notebooklm_adapter.py
athena-orchestration/adapters/notion/: __init__.py  notion_adapter.py
athena-orchestration/contracts/: __init__.py  pipeline_contract.py  task_contract.py  tool_contract.py
athena-orchestration/contracts/schemas/: pipeline_schema.yaml  task_schema.yaml
athena-orchestration/docs/: adapters.md  architecture.md  contracts.md  pipelines.md
athena-orchestration/ops/: __init__.py  sentry_config.py
athena-orchestration/ops/ci/: __init__.py  test_runner.py  validate.py
athena-orchestration/ops/docker/: Dockerfile  docker-compose.yml
athena-orchestration/pipelines/: __init__.py  base.py  registry.py
athena-orchestration/pipelines/examples/: __init__.py  research_pipeline.py
athena-orchestration/tests/contracts/: test_task.py
athena-orchestrator/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
athena-orchestrator/agents/: athena_875_classifier.py  athena_reflection_agent.py  commit_agent.py  executor_agent.py  planner_agent.py
athena-orchestrator/config/: agents.yaml  athena_875_taxonomy.yaml  athena_reflection.yaml  permissions.yaml  projects.json  settings.yaml
athena-orchestrator/cto/: connector.py
athena-orchestrator/data/reflection/: execution_history.json  patterns.json
athena-orchestrator/docs/: ATHENA_875_CHANGELOG.md  ATHENA_875_CLASSIFIER.md  ATHENA_REFLECTION.md  ATHENA_REFLECTION_ARCHITECTURE.md  ATHENA_REFLECTION_CHANGELOG.md
athena-orchestrator/docs/athena_875_protocol/smartboot_healthcare_ip_package/: README.md  SMARTBOOT_TEMPLATE.md  smartboot_bom.csv  smartboot_classifier_test.md  smartboot_submission.json
athena-orchestrator/examples/: athena_875_usage.py
athena-orchestrator/git/: git_manager.py
athena-orchestrator/notion/: notion_client.py
athena-orchestrator/notion/templates/: master_projects_db_schema.json  master_runs_db_schema.json  project_docs_db_schema.json  project_runs_db_schema.json  project_tasks_db_schema.json
athena-orchestrator/runner/: main_loop.py
athena-orchestrator/scripts/: check_tokens.py  setup_env.sh
athena-orchestrator/templates/: submission_schema.yaml  task_output_format.json
athena-orchestrator/tests/: test_athena_875_classifier.py  test_athena_reflection.py
athena-orchestrator/voice_control/: README.md  __init__.py  __main__.py  command_bus.py  config.py  controller.py  demo_commands.txt  emergency_stop.py  executor.py  intent_parser.py  requirements.txt  safe_mode.py  voice_input.py  wake_word.py  websocket_server.py
mlstudio/: IMPLEMENTATION_NOTES.md  README.md  __init__.py  chatgpt_parser.py  convert_chat_export.py
mlstudio/examples/: README.md  chatgpt_example.json
mlstudio/outputs/: .gitkeep  Data Analysis with Pandas.md  Python Programming Basics.md
mlstudio/sample_data/: chatgpt_sample.json  (+1 more)
