[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athena-orchestration"
version = "1.0.0"
description = "Unified orchestration for LLM providers and platforms"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Athena Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-genai>=0.3.0",
    "notion-client>=2.2.1",
    "github>=2.0.0",
    "sentry-sdk>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["contracts", "adapters", "pipelines", "ops"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
